# chefia-pos

./: .env.example  .gitignore  .pre-commit-config.yaml  2.json  3.json  AJUSTES_TYPESCRIPT_FINAL_REPORT.md  ANALISE_DUPLICACAO_CRUD.md  App.tsx  BACKEND_ANALYSIS_COMPLETE_REPORT.md  BACKEND_ARCHITECTURE_ANALYSIS.md  BUSINESS_RULES_ANALYSIS.md  BUSINESS_RULES_IMPLEMENTATION_FINAL_REPORT.md  BusinessDayPage.tsx  CLAUDE.md  COMPARACAO_WEBSITES.md  CashWithdrawalPage.tsx  CashierOpeningClosingPage.tsx  CashierService.ts  ConfigService.ts  DEBUG_FINDINGS.md  DEBUG_LOGIN_FINAL_SOLUTION_REPORT.md  Dockerfile  END_TO_END_TEST_COMPLETE_REPORT.md  FRONTEND_CORRECAO_FINAL_REPORT.md  FRONTEND_CRASH_FIX_REPORT.md  FUNCIONALIDADES_AVANCADAS_IMPLEMENTADAS.md  INTEGRATION_DOCUMENTATION.md  INTEGRATION_DOCUMENTATION_FINAL.md  INTEGRATION_TEST_COMPLETE_REPORT.md  JWT_AUTH_FIX_FINAL_REPORT.md  JWT_INTEGRATION_COMPLETE.md  KNOWLEDGE_AUDIT_REPORT.md  LOGIN_DEBUG_FINAL_REPORT.md  LOGIN_ISSUE_INVESTIGATION_GUIDE.md  LOGIN_SOLUTION_COMPLETE_REPORT.md  LOGIN_SOLUTION_FINAL_REPORT.md  LOOP_INFINITO_SOLUCAO_FINAL_REPORT.md  LoginModal.tsx  MELHORIAS_IMPLEMENTADAS.md  MELHORIAS_IMPLEMENTADAS_FINAL_REPORT.md  (+57 more)
src/: App.jsx  Makefile  main.py  mypy.ini  pyproject.toml  requirements-postgres.txt  requirements.txt
src/accounts/models/: accounts_models.py
src/accounts/router/: accounts_router.py
src/accounts/services/: accounts_service.py
src/ai/: models.py
src/ai/demand_forecast/: __init__.py  models.py  router.py  service.py
src/ai/operational_optimization/: __init__.py  models.py  router.py
src/ai/services/: delivery_service.py  kiosk_service.py  optimization_service.py  staff_service.py  table_service.py  whatsapp_service.py
src/ai/tests/: integration_validator.py  run_integration_validation.py
src/analytics/models/: dashboard_models.py  db_models.py
src/analytics/repositories/: analytics_repository.py
src/analytics/router/: analytics_router.py
src/analytics/services/: advanced_analytics_service.py  analytics_db_service.py  analytics_service.py
src/api/: main.py
src/api_gateway/: gateway.py  router.py
src/api_gateway/tests/: test_api_gateway.py
src/audit/: audit_logger.py
src/auth/: auth.py  auth_router.py  models.py  router.py  security.py
src/auth/models/: __init__.py  db_models.py  numeric_password_models.py  user_models.py
src/auth/repositories/: numeric_password_repository.py  user_repository.py
src/auth/router/: numeric_password_router.py
src/auth/services/: numeric_password_service.py  user_service.py
src/backoffice/: App.jsx  index.html  index.js
src/backoffice/api/: backoffice_api.py
src/backoffice/auth/: auth_service.py
src/backoffice/services/: backoffice_service.py
src/backoffice/styles/: tokens.js
src/business_day/events/: business_day_events.py
src/business_day/models/: business_day.py  db_models.py
src/business_day/repositories/: business_day_repository.py
src/business_day/router/: business_day_router.py
src/business_day/services/: business_day_service.py
src/cashier/events/: cashier_events.py
src/cashier/models/: cashier.py  db_models.py
src/cashier/repositories/: cashier_repository.py
src/cashier/router/: cashier_router.py
src/cashier/services/: cashier_service.py
src/command_card/models/: command_card_models.py  db_models.py
src/command_card/router/: command_card_router.py
src/command_card/services/: command_card_service.py
src/config/: keyboards.json
src/core/: dependencies.py  exceptions.py  middleware.py  optimistic_lock.py
src/core/api/: test_api.py
src/core/cache/: __init__.py  redis_client.py
src/core/database/: __init__.py  connection.py  db_service.py
src/core/events/: auth_events.py  event_bus.py  event_monitor.py
src/core/exceptions/: base_exceptions.py
src/core/messaging/: __init__.py  base_chatbot.py  message_broker.py
src/core/middleware/: __init__.py  error_handling.py
src/core/models/: core_models.py
src/core/tracing/: __init__.py  event_logger.py  trace_api.py  trace_repository.py  transaction_tracker.py
src/core/utils/: bcrypt_patch.py  logging_utils.py
src/customer/models/: customer_models.py  db_models.py
src/customer/repositories/: customer_repository.py
src/customer/router/: customer_router.py
src/customer/services/: customer_service.py
src/dashboard/: EndToEndTestDashboard.css  index.html
src/delivery/events/: delivery_events.py
src/delivery/models/: db_models.py  delivery_models.py
src/delivery/repositories/: delivery_repository.py
src/delivery/router/: delivery_router.py  maps_router.py
src/delivery/services/: delivery_db_service.py  delivery_service.py  google_maps_db_service.py  google_maps_service.py
src/delivery/tests/: test_delivery_service.py  test_maps_integration.py
src/delivery/ui/: DeliveryMapManager.jsx
src/employee/models/: db_models.py  employee_models.py
src/employee/router/: employee_router.py
src/employee/services/: employee_service.py
src/fiscal/models/: accounting_models.py  (+4 more)
src/instagram/: instagram_chatbot_service.py  instagram_integration.py
src/marketing/: __init__.py  facebook_pixel.py  marketing_integration.py
src/messenger/: messenger_chatbot_service.py  messenger_integration.py
src/mobile_waiter/: App.tsx  package.json  tsconfig.json
src/peripherals/: pyproject.toml  setup.cfg
src/realtime/: websocket_sync.py
src/supplier/: README_MIGRATION.md  __init__.py
src/support/: support_service.py
src/tests/: README_REMOTE_ORDERS.md  omnichannel_validator.py  run_all_tests.py  test_auth.py  test_broker_cache.py  test_broker_cache_simple.py  test_business_day.py  test_cashier.py  test_core_modules_postgres.py  test_database_operations.py  test_end_to_end.py  test_event_bus.py  test_integrated_product.py  test_postgres_integration.py  test_product.py  test_remote_orders_complete.py  test_simple_models.py
src/utils/: ErrorMessage.jsx  LoadingSpinner.jsx
src/whatsapp/: ai_integration.py  chatbot_service.py  integrated_chatbot.py  order_confirmation.py  payment_integration.py  twilio_integration.py
(+1221 files in other folders)
